--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,10 +1,15 @@
 .sidebar__compose {
-  margin-top: 15px;
-  margin-left: 10px;
-  margin-bottom: 15px;
+  margin-top: 15px !important;
+  margin-left: 10px !important;
+  margin-bottom: 15px !important;
   text-transform: capitalize !important;
-  color: gray;
-  padding: 15px;
+  color: gray !important;
+  padding: 15px !important;
   border-radius: 30px !important;
   box-shadow: 0px 2px 5px -2px rgba(0, 0, 0, 0.75);
+}
+.sidebar__footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
