--- a/src/Header.css
+++ b/src/Header.css
@@ -3,6 +3,12 @@
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid whitesmoke;
+  height: 65px;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  background-color: white;
+  overflow: hidden;
 }
 .header__left {
   display: flex;
@@ -10,20 +16,22 @@
 }
 .header__left > img {
   object-fit: contain;
-  height: 80px;
+  height: 60px;
   margin-left: 5px;
 }
 .header__mid {
   display: flex;
+  justify-content: flex-start;
   align-items: center;
-  padding: 20px;
+  padding: 10px;
+  width: 40%;
   background-color: whitesmoke;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 .header__mid > input {
   border: none;
   width: 100%;
-  padding: 10px;
+  padding: 5px;
   outline: none;
   font-size: medium;
   background-color: transparent;
