--- a/src/components/SideBar/Sidebar.css
+++ b/src/components/SideBar/Sidebar.css
@@ -7,9 +7,9 @@
   margin-top: 15px !important;
   margin-left: 10px !important;
   margin-bottom: 15px !important;
+  padding: 15px 30px 15px 30px !important;
   text-transform: capitalize !important;
-  color: gray !important;
-  padding: 15px !important;
+  color: red !important;
   border-radius: 30px !important;
   box-shadow: 0px 2px 5px -2px rgba(0, 0, 0, 0.75);
 }
