mail list order as per date reversed and mail component made dynamic

--- a/src/components/Mail/EmailRow.css
+++ b/src/components/Mail/EmailRow.css
@@ -1,3 +1,8 @@
+@media (min-width: 900px) {
+  .emailRow__message .emailRow__time {
+    display: none !important;
+  }
+}
 .emailRow {
   display: flex;
   align-items: center;
