folder structure chaned

--- a/src/components/Mail/EmailRow.css
+++ b/src/components/Mail/EmailRow.css
@@ -17,6 +17,9 @@
 }
 .emailRow__title {
   padding: 0 15px;
+  width: 20%;
+  overflow: hidden;
+  text-overflow: ellipsis;
   font-weight: normal !important;
 }
 .emailRow:hover {
