--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -3,21 +3,20 @@
   align-items: center;
   border-bottom-width: 2px;
   padding: 15px !important;
-  min-width: 200px;
+  min-width: 180px;
   font-weight: 600;
   font-size: 14px !important;
   cursor: pointer;
   color: grey;
   border-width: 0 !important;
+  z-index: 999;
+  padding-right: 10px;
 }
 .section--selected {
-  background-color: whitesmoke;
+  /* background-color: whitesmoke; */
   border-width: 3px !important;
 }
 .section:hover {
   background-color: whitesmoke;
   border-width: 3px !important;
-}
-.section:active{
-  
 }
