--- a/src/components/SideBar/SidebarOption.css
+++ b/src/components/SideBar/SidebarOption.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   height: 40px;
-  padding: 0 10px;
+  padding: 0 20px;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   cursor: pointer;
@@ -37,4 +37,9 @@
 
 .sidebarOption--active > p {
   display: inline;
+}
+
+.sidebarOption--active {
+  background-color: #fcdada;
+  color: #c94141 !important;
 }
